<resources>
    <string name="app_name">EventosIncuabadora</string>
    <string name="RegistrateCorreo">Correo</string>
    <string name="RegistratePassword">Contraseña</string>
    <string name="RegistrateCPassword">Confirmar Contraseña</string>
    <string name="RegistrateOk">REGISTRAR</string>
    <string name="LoginCorreo">Correo</string>
    <string name="LoginPassword">Contraseña</string>
    <string name="LoginOk">LOGIN</string>
    <string name="LNotienesCuenta">No Tienes Cuenta?</string>
    <string name="LRegistrateAqui">Registrate Aqui</string>
    <string name="title_activity_tercera">TerceraActivity</string>
    <string name="logoutMenu">Logout</string>
    <string name="seeMore">See more</string>
    <string name="default_web_id_client">231108868525-sj7am0sqsk054v371cdktjjop2ogth2c.apps.googleusercontent.com</string>
</resources>
